# ai-wanderer

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml.cloud  config.yaml.example  pyproject.toml  render.yaml  requirements.txt  run.sh
.github/workflows/: lint.yml
docs/: API.md  HOSTING.md
src/ai_free_swap/: __main__.py  config.py  converters.py  main.py  models.py  router.py  server.py
src/ai_free_swap/providers/: __init__.py  anthropic_provider.py  base.py  gemini.py  openai_compat.py  openai_provider.py  openrouter.py  qwen.py
tests/: conftest.py  test_anthropic_provider.py  test_config.py  test_converters.py  test_models.py  test_router.py  test_server.py
