[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-free-swap"
version = "0.2.0"
description = "OpenAI-compatible proxy that routes through free-tier AI providers with priority-based fallback"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=1.8",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.30",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ai-free-swap = "ai_free_swap.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
